# FlowSight.AI

./: .env.example  .gitignore  .gitleaksignore  AI_INTEGRATION.md  AI_QUICKSTART.md  ARCHITECTURE.md  CLA-CORPORATE.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  SPONSORS.md  fetch_schema.js  package.json  pnpm-lock.yaml  setup_llm.py  sponsors.json  turbo.json
.github/workflows/: agent-cargo-check.yml  deploy-supabase-functions.yml  release.yml  sync-sponsors.yml
apps/agent/: README.md  electron.vite.config.ts  package.json  tsconfig.json  vite.config.js  vite.config.ts
apps/agent/python/: semantic_fingerprint.py
apps/agent/src-tauri/: Cargo.toml  TEST_REPORT.txt  tauri.conf.json
apps/agent/src-tauri/capabilities/: default.json
apps/agent/src-tauri/icons/: icon.icns
apps/agent/src-tauri/src/: agent.rs  agent_pure.rs  auth.rs  cloud.rs  coach_chat.rs  context.rs  entitlements.rs  fingerprint.rs  insights_local.rs  jira.rs  lib.rs  linear.rs  llama_bin.rs  llama_port.rs  llama_windows_job.rs  main.rs  oauth_env.rs  ocr.ps1  paths.rs  screen_capture.rs  screenshot_disk.rs  sync.rs  sync_env.rs  sync_pure.rs  user_preferences.rs  vision_model.rs
apps/agent/src/config/: privacy.ts
apps/agent/src/core/: ActivityMonitor.ts  BlockerDetector.ts  EventStore.ts  ScreenCapture.ts
apps/agent/src/dashboard/: DashboardServer.ts
apps/agent/src/main/: agent.ts  index.ts
apps/agent/src/main/services/: ActivityMonitor.ts  ConfigManager.ts  EventSender.ts
apps/agent/src/ml/: LLMLocal.ts  OCRLocal.ts  RulesEngine.ts  VisionLocal.ts
apps/agent/src/preload/: index.ts
apps/agent/src/renderer/: auth-service.js  index.html
apps/agent/src/sync/: CloudSync.ts
apps/dashboard/: README.md  env.d.ts  next.config.js  package.json  supabase-schema.sql
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/api/activity-report/: route.ts
apps/dashboard/src/app/api/ai/analyze/: route.ts
apps/dashboard/src/app/api/developers/: route.ts
apps/dashboard/src/app/api/events/: route.ts
apps/dashboard/src/app/api/reports/: route.ts
apps/dashboard/src/app/api/sync/: route.ts
apps/dashboard/src/app/api/teams/: route.ts
apps/dashboard/src/app/api/tickets/: route.ts
apps/dashboard/src/app/register/: page.tsx
apps/dashboard/src/app/team-activity/: page.tsx
apps/dashboard/src/components/: DashboardLayout.tsx  ProjectStats.tsx  TeamMap.tsx  Timeline.tsx
apps/dashboard/src/hooks/: usePusher.ts  useRealtime.ts
apps/dashboard/src/lib/: cloud-sync.ts  local-db.ts  mongodb.ts  pusher.ts  rules-engine.ts  summary-generator.ts
apps/dashboard/src/lib/ai/: analyzer.ts  provider.ts  types.ts
apps/dashboard/src/lib/supabase/: client.ts  config.ts  types.ts
apps/pm/: package.json  server.js  vite.config.js
apps/pm/src/: app.js  index.html  main.js
apps/pm/src-tauri/: Cargo.toml  tauri.conf.json
apps/pm/src-tauri/capabilities/: default.json
apps/pm/src-tauri/src/: lib.rs  main.rs  pm.rs
docs/: resource-analysis.md  webhook-setup.md
local_llm/Qwen3-VL-1B-Merged/: README.md  args.json  config.json
scripts/: download-models.js  fetch-models.mjs  fetch-models.py  sync-sponsors.mjs
supabase/: config.toml
supabase/functions/coach-chat/: index.ts
supabase/functions/generate-insights/: index.ts
tests/unit/: BlockerDetector.test.ts  RulesEngine.test.ts
tools/popular-apps-catalog/: Cargo.toml
tools/popular-apps-catalog/assets/: business-of-apps-most-popular-2026.txt  supplement.txt
tools/popular-apps-catalog/src/: main.rs
(+3 files in other folders)
