[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
whoami = "1.5"
active-win-pos-rs = "0.8"
oauth2 = "4.4"
url = "2.5"
tiny_http = "0.12"
open = "5.0"
dotenv = "0.15"
urlencoding = "2.1"
flate2 = "1"
tar = "0.4"
zip = "2"

[target.'cfg(target_os = "windows")'.dependencies]
screenshots = "0.8"
