[package]
name = "flowsight-pm"
version = "1.0.0"
description = "FlowSight PM Dashboard"
authors = ["FlowSight"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "flowsight_pm"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
tiny_http = "0.12"
dirs = "5"
whoami = "2.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
